fix: extra overflow of parent component disabled

--- a/ui/pages/permissions-connect/choose-account/index.scss
+++ b/ui/pages/permissions-connect/choose-account/index.scss
@@ -1,4 +1,5 @@
 .permissions-connect-choose-account {
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
